--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Content Identifying app using ACR API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,15 @@
   },
   "homepage": "https://github.com/FAC10/AmeMusic#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "crypto": "0.0.3",
     "env2": "^2.2.0",
+    "express": "^4.15.3",
     "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.3.0"
   }
 }
