--- a/package.json
+++ b/package.json
@@ -20,10 +20,17 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "crypto": "0.0.3",
+    "css-loader": "^0.28.10",
+    "elm-webpack-loader": "^4.4.0",
     "env2": "^2.2.0",
     "express": "^4.15.3",
+    "file-loader": "^1.1.11",
     "path": "^0.12.7",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.1.1",
+    "webpack-dev-server": "^3.1.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
